--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -6,8 +6,33 @@ html, body {
 .chart {
   width: 100%;
   height: 100%;
+  z-index: 0;
 }
 
-/*.chart:hover {
+.state {
+  fill: #f2f2f2;
+}
+
+.state:hover {
+  fill: #e3e3e3;
+}
+
+g:hover {
   cursor: pointer;
-}*/
+}
+
+#title {
+  position: absolute;
+  z-index: 1;
+  top: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+}
+
+#title p {
+  font-size: 1.3em;
+  font-family: sans-serif;
+  text-align: center;
+  font-weight: 100;
+}
