--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,8 +1,10 @@
+/*Base*/
 html, body {
   margin: 0;
   padding: 0;
 }
 
+/*Chart Formatting*/
 .chart {
   width: 100%;
   height: 100%;
@@ -21,6 +23,7 @@ g:hover {
   cursor: pointer;
 }
 
+/*Title Formatting*/
 #title {
   position: absolute;
   z-index: 1;
@@ -35,4 +38,43 @@ g:hover {
   font-family: sans-serif;
   text-align: center;
   font-weight: 100;
+}
+
+/*Timeline and Credits Formatting*/
+.credits {
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+  font-size: 0.5em;
+  font-family: sans-serif;
+  font-weight: 100;
+  text-align: right;
+}
+
+.timeline {
+  position: absolute;
+  overflow: auto;
+  z-index: 1;
+  width: calc(100% - 550px);
+  bottom: 10px;
+  left: 10px;
+}
+
+.year {
+  display: inline-block;
+  margin: 0 10px 0 10px;
+  font-family: sans-serif;
+  font-weight: 100;
+  text-align: center;
+  /*padding: 0 10px 0;*/
+  /*background: #f2f2f2;*/
+  /*border-radius: 5px;*/
+}
+
+.year:hover {
+  cursor: pointer;
+}
+
+[id="2015"] {
+  color: #36c87e;
 }
