--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -58,10 +58,13 @@ g:hover {
   width: calc(100% - 550px);
   bottom: 10px;
   left: 10px;
+  height: 20px;
 }
 
 .year {
+  /*position: absolute;*/
   display: inline-block;
+  /*bottom: 0;*/
   margin: 0 10px 0 10px;
   font-family: sans-serif;
   font-weight: 100;
