--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -43,8 +43,9 @@ g:hover {
 /*Timeline and Credits Formatting*/
 .credits {
   position: absolute;
-  bottom: 10px;
+  bottom: 15px;
   right: 20px;
+  z-index: 1;
   font-size: 0.5em;
   font-family: sans-serif;
   font-weight: 100;
@@ -59,6 +60,30 @@ g:hover {
   bottom: 10px;
   left: 10px;
   height: 20px;
+}
+
+.timelineFade {
+  position: absolute;
+  bottom: 0;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgb(255, 255, 255));
+  z-index: 2;
+  width: calc(100% - 540px);
+  height: 40px;
+  pointer-events: none;
+}
+
+.timelineList {
+  min-width: 500px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 0;
+  width: 550px;
+  height: 40px;
+  background: #fff;
 }
 
 .year {
