--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -44,14 +44,39 @@ g:hover {
   font-weight: 100;
 }
 
+#intro {
+  position: absolute;
+  z-index: 1;
+  /* top: 50%; */
+  top: calc(5% + 40px);
+  left: 50%;
+  transform: translateX(-50%) /*translateY(-50%)*/;
+  width: 90%;
+  /* width: 40%; */
+  /* pointer-events: none; */
+  /* padding: 5px 10px; */
+  /* background-color: rgba(255, 255, 255, 0.9); */
+  /* border-radius: 10px; */
+  /* box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.3); */
+}
+
+#introText {
+  font-size: 1em;
+  font-family: sans-serif;
+  text-align: center;
+  font-weight: 100;
+  font-style: italic;
+}
+
 /*Legend Formatting*/
 
 .legend {
   position: absolute;
+  z-index: 1;
   /* bottom: calc(5% + 60px); */
   /* left: 50%; */
   /* transform: translateX(-50%); */
-  bottom: 4px;
+  bottom: 1px;
   left: 20px;
   font-size: 0.8em;
   font-family: sans-serif;
@@ -65,7 +90,7 @@ g:hover {
 
 .legendTitle {
   position: absolute;
-  bottom: 10;
+  bottom: 4;
   /* left: 8px; */
   left: 50%;
   transform: translateX(-50%);
@@ -105,7 +130,7 @@ g:hover {
 }
 
 .legendLabel {
-  bottom: 10px;
+  bottom: 4;
   position: absolute;
   font-style: italic;
 }
@@ -135,7 +160,7 @@ g:hover {
   position: absolute;
   overflow: auto;
   z-index: 1;
-  width: calc(100% - 550px);
+  width: calc(100% - 730px);
   bottom: 10px;
   left: 10px;
   height: 17px;
@@ -148,7 +173,7 @@ g:hover {
   bottom: 0;
   background: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgb(255, 255, 255));
   z-index: 2;
-  width: calc(100% - 540px);
+  width: calc(100% - 720px);
   height: 40px;
   pointer-events: none;
 }
@@ -162,7 +187,7 @@ g:hover {
   bottom: 0;
   right: 0;
   z-index: 0;
-  width: 550px;
+  width: 100%;
   height: 40px;
   background: #fff;
 }
