--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,6 +1,6 @@
 /*Base*/
 
-html, body {
+html, body, .content {
   margin: 0;
   padding: 0;
 }
@@ -32,27 +32,45 @@ g:hover {
 
 /*Title Formatting*/
 
-#title {
+.titleBox {
   position: absolute;
   z-index: 1;
-  top: 5%;
+  top: 5vh;
   left: 50%;
   transform: translateX(-50%);
+  transition: 0.2s;
+  vertical-align: center;
+}
+
+.errorText {
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  display: none;
+}
+
+.titleBox:hover {
+  opacity: 0.2;
+}
+
+#title {
   /* width: 100%; */
   background: #fff;
-  padding: 0 20;
+  padding: 5 20;
+  margin: 0;
   border-radius: 5px;
   /* box-shadow: 0 0 60px 3px rgba(0, 0, 0, 0.15); */
-  transition: 0.5s;
+  transition: 0.2s;
+  display: inline-block;
+  vertical-align: center;
+
 }
 
-.titleShadow {
+.shadow {
   box-shadow: 0 0 60px 3px rgba(0, 0, 0, 0.15);
-  transition: 0.5s;
-}
-
-.titleShadow:hover {
-  opacity: 0.2;
+  transition: 0.2s;
 }
 
 #titleText {
@@ -60,6 +78,45 @@ g:hover {
   font-family: sans-serif;
   text-align: center;
   font-weight: 100;
+}
+
+#download {
+  position: absolute;
+  z-index: 1;
+  top: 5vh;
+  right: 5vh;
+  overflow: hidden;
+  vertical-align: center;
+  /* padding: 10px; */
+  background: #fff;
+  border-radius: 5px;
+  transition: 0.2s;
+}
+
+#logo {
+  position: absolute;
+  z-index: 1;
+  top: 5vh;
+  left: 5vh;
+  overflow: hidden;
+  vertical-align: center;
+  padding: 0 20px;
+  background: #fff;
+  border-radius: 5px;
+  transition: 0.2s;
+}
+
+#download:hover {
+  cursor: pointer;
+  /* background: #adfcff; */
+}
+
+.svgImage {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  height: 50%;
 }
 
 #intro {
@@ -232,7 +289,7 @@ g:hover {
   cursor: pointer;
 }
 
-[id="2017"] {
+[id="2018"] {
   color: #31C6CC;
 }
 
@@ -247,4 +304,14 @@ g:hover {
 
 .timeline::-webkit-scrollbar-thumb {
   background: #31C6CC;
+}
+
+@media only screen and (max-width: 1000px) {
+  .content {
+    display: none;
+  }
+
+  .errorText {
+    display: block;
+  }
 }
